--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,34 @@
 {
-	"name": "indietorrent/audio-manipulator",
+	"name": "indiehd/audio-manipulator",
 	"type": "library",
 	"description": "Library for manipulating audio files (validating, transcoding, and tagging)",
 	"keywords": ["audio","flac","mp3"],
-	"homepage": "https://github.com/indietorrent/audio-manipulator",
-	"license": "Copyright 2005-2016 indieTorrent.org LLC",
+	"homepage": "https://github.com/indiehd/audio-manipulator",
+	"license": "MIT",
 	"authors": [
 		{
-			"name": "Ben Johnson",
-			"email": "ben@indietorrent.org",
-			"homepage": "https://indietorrent.org",
-			"role": "Lead Developer & Creator"
+			"name": "indieHD, LLC",
+			"email": "webmaster@indiehd.com",
+			"homepage": "https://indiehd.com"
+		},
+		{
+			"name": "Contributors",
+			"homepage": "https://github.com/indiehd/audio-manipulator/graphs/contributors"
 		}
 	],
 	"require": {
-		"php": ">=5.3.0"
+		"php": ">=7.1.0",
+		"symfony/process": "^4.2",
+		"symfony/dependency-injection": "^4.2",
+		"james-heinrich/getid3": "^1.9"
 	},
 	"autoload": {
 		"psr-4": {
-			"IndieTorrent\\AudioManipulator\\": "src/"
+			"IndieHD\\AudioManipulator\\": "src/"
 		}
 	},
-	"minimum-stability": "dev"
+	"minimum-stability": "stable",
+	"require-dev": {
+		"phpunit/phpunit": "^8.0"
+	}
 }
