--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
 	"minimum-stability": "stable",
 	"require-dev": {
 		"phpunit/phpunit": "^8.0",
-		"phpro/grumphp": "^0.15.0"
+		"phpro/grumphp": "^0.15.0",
+		"squizlabs/php_codesniffer": "^3.4",
+		"phpmd/phpmd": "^2.6",
+		"friendsofphp/php-cs-fixer": "^2.14"
 	}
 }
