ci: Set an appropriate value for the ffmpeg binary on Ubuntu 16

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ php:
 
 sudo: false
 
+env:
+  - FFMPEG_BINARY=avconv
+
 before_install:
   - sudo apt-get -y install sox libsox2 libsox-dev libsox-fmt-all flac lame libav-tools atomicparsley
 
