--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
 		"phpro/grumphp": "^0.15.0",
 		"squizlabs/php_codesniffer": "^3.4",
 		"phpmd/phpmd": "^2.6",
-		"friendsofphp/php-cs-fixer": "^2.14"
+		"friendsofphp/php-cs-fixer": "^2.14",
+		"php-coveralls/php-coveralls": "^2.1"
 	}
 }
