--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - sudo apt-get -y install sox libsox2 libsox-dev libsox-fmt-all flac lame libav-tools atomicparsley
   - git clone https://github.com/quodlibet/mutagen.git /tmp/mutagen
   - cd /tmp/mutagen
-  - git checkout -t release-1.42.0
+  - git checkout -b release-1.42.0
   - ./setup.py build
   - sudo ./setup.py install
 
