ci: Fix missing sudo

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - sed -i 's/AC_PROG_CXX/AC_PROG_CXX\nAC_PROG_OBJCXX/' ./configure.ac
   - ./autogen.sh
   - ./configure
-  - make && make install
+  - sudo make && make install
   - cd $TRAVIS_BUILD_DIR
 
 before_script:
