--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"james-heinrich/getid3": "dev-master",
 		"monolog/monolog": "^1.24",
 		"league/flysystem": "^1.0",
-		"indiehd/filename-sanitizer": "^0.1.0"
+		"indiehd/filename-sanitizer": "^0.1.0",
+		"vlucas/phpdotenv": "^3.3"
 	},
 	"autoload": {
 		"psr-4": {
