fix: Fix bug in third-party dependency (getID3)
Require specific commit in jamesheinrich/getid3 to fix the issue described in https://github.com/JamesHeinrich/getID3/commit/2f8e92f8978a4ec44f6661f45e82d6d6644bd4a3

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "php": ">=7.1.0",
         "symfony/process": "^4.2",
         "symfony/dependency-injection": "^4.2",
-        "james-heinrich/getid3": "^1.9",
+        "james-heinrich/getid3": "dev-master#bd3501c815586f8292316f832d5ff8425f466ba0",
         "monolog/monolog": "^2.0",
         "league/flysystem": "^1.0",
         "vlucas/phpdotenv": "^3.3"
