ci: Replace Coveralls.io integration with Codecov.io

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -5,7 +5,7 @@ parameters:
       allow_empty_message: false
       enforce_capitalized_subject: false
       enforce_no_subject_trailing_period: true
-      enforce_no_subject_punctuations: true
+      enforce_no_subject_punctuations: false
       enforce_single_lined_subject: true
       type_scope_conventions:
         - types:
