--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ script:
   - vendor/bin/phpunit tests --coverage-clover build/logs/clover.xml
 
 after_success:
-  - travis_retry php vendor/bin/php-coveralls
+  - bash <(curl -s https://codecov.io/bash)
+  - travis_retry php vendor/bin/php-coveralls -vvv
 
 notifications:
   email:
