chore: Update dependencies to be compatible with newer package versions
Several large frameworks now require Symfony's 6.x components, e.g., Laravel 9.

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,4 +1,4 @@
-parameters:
+grumphp:
   additional_info: "\nTo get full documentation for the project\nVisit https://docs.indiehd.com\n"
   tasks:
     git_commit_message:
