--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=8.1.0",
         "symfony/process": "^6.0",
         "symfony/dependency-injection": "^6.0",
-        "james-heinrich/getid3": "dev-master#bd3501c815586f8292316f832d5ff8425f466ba0",
+        "james-heinrich/getid3": "1.9.23",
         "monolog/monolog": "^2.0",
         "league/flysystem": "^3.0",
         "vlucas/phpdotenv": "^5.0"
