fix: Allow grumphp Composer plugin
Allowing plugins explicitly is required in modern Composer.

--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,10 @@
         "phpmd/phpmd": "^2.6",
         "friendsofphp/php-cs-fixer": "^3.8",
         "php-coveralls/php-coveralls": "^2.1"
+    },
+    "config": {
+        "allow-plugins": {
+            "phpro/grumphp": true
+        }
     }
 }
