--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -22,14 +22,24 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
+      # Debug: Check Docker version
+      - name: Verify Docker Installation
+        run: docker --version
+
       # Build and bring up Docker containers
       - name: Build and start services
         run: |
           docker compose up --build -d
+          docker compose ps  # Show status of all containers
+
+      # Debug: Verify running services
+      - name: List running containers
+        run: docker ps -a
 
       # Run tests inside the container
       - name: Run test suite
         run: |
+          docker compose run app composer install --prefer-dist --no-scripts --no-progress --no-interaction --dev
           docker compose run app vendor/bin/phpunit --testdox
 
       # Bring down Docker containers after tests
